--- a/CONTENTIEUX_TF/Cours_tex/Chap3.tex
+++ b/CONTENTIEUX_TF/Cours_tex/Chap3.tex
@@ -235,30 +235,44 @@ Avant tout déplacement, le service du Cadastre saisi pour avis technique procè
 
 \begin{itemize}
 	\item \textbf{Analyse de la Fiche d'Évaluation :} L'agent vérifie si les éléments déclarés ou recensés correspondent à la catégorie taxée.
-	\textit{Exemple d'erreur détectable au bureau : Une parcelle taxée comme « Bâtie » alors que la mise à jour des images satellitaires montre un terrain vide.}
 	
+	\begin{itemize}[label=\tiny$\blacksquare$]
+	\item \textit{Exemple d'erreur détectable au bureau : Une parcelle taxée comme « Bâtie » alors que la mise à jour des images satellitaires ou des orthophotos montre un terrain vide (démolition non enregistrée).}
+      \end{itemize}
+      
 	\item \textbf{Vérification des calculs :} Contrôle de l'application correcte des tarifs au m² selon la zone (Zone administrative, résidentielle, périphérie) et vérification arithmétique de la surface pondérée.
 \end{itemize}
 
 \subsubsection{L'expertise terrain : Le constat contradictoire}
 
-C'est l'acte central de l'instruction foncière. Lorsque le désaccord persiste sur la consistance du bien, une descente sur les lieux est indispensable.
+C'est l'acte central de l'instruction foncière. Lorsque le désaccord persiste sur la consistance du bien (surface, état, confort), une descente sur les lieux est indispensable.
 
 \begin{enumerate}
 	\item \textbf{Le fondement juridique (Droit de visite) :} \\
-	Les agents assermentés du Cadastre disposent d'un droit d'entrée dans les propriétés pour les besoins de l'évaluation fiscale (sous réserve des heures légales).
+	Les agents assermentés du Cadastre disposent d'un droit d'entrée dans les propriétés pour les besoins de l'évaluation fiscale (sous réserve des heures légales, généralement entre 8h et 18h hors samedi, dimanches et jours fériés).
 	
 	\item \textbf{La méthodologie du « constat contradictoire » :} \\
 	Pour que le rapport d'expertise soit inattaquable devant le juge, l'opération doit être contradictoire.
 	\begin{itemize}
-		\item \textbf{Convocation :} Le contribuable est invité à être présent ou représenté.
-		\item \textbf{Le mesurage :} Prise de mesures des surfaces hors œuvre et habitables.
-		\item \textbf{Le recensement des éléments de confort (VLC) :} L'agent note la présence et l'état de fonctionnement des équipements (piscine, climatisation, ascenseur).
+		\item \textbf{Convocation :} Le contribuable est invité à être présent ou représenté lors du mesurage..
+		\item \textbf{Le mesurage :} Prise de mesures des surfaces hors œuvre (murs inclus) et des surfaces habitables.
+		\item \textbf{Le recensement des éléments de confort (VLC) :} L'agent note la présence et l'état de fonctionnement des équipements (piscine, climatisation centrale, ascenseur, qualité des matériaux).
 		\item \textit{Point critique :} L'appréciation de la \textbf{vétusté}. L'agent doit évaluer si le coefficient de vétusté appliqué correspond à la dégradation réelle.
 	\end{itemize}
 	
 	\item \textbf{Le Rapport d'Expertise Cadastrale :} \\
-	À l'issue de la visite, l'agent rédige un rapport technique qui lie le service du contentieux sur les faits. Ce rapport doit contenir : la description précise de l'immeuble, un croquis coté, des photographies datées, et une conclusion technique claire.
+	À l'issue de la visite, l'agent rédige un rapport technique qui lie le service du contentieux sur les faits. Ce rapport doit contenir :
+	
+	\begin{itemize}
+		\item La description précise de l'immeuble à la date de la visite.
+		
+		\item Un croquis coté si les surfaces diffèrent du plan initial.
+		
+		\item Des photographies datées (preuves irréfutables en cas de recours juridictionnel).
+		
+		\item Une conclusion technique claire (ex: "Confirmons la surface de 250m²" ou "Proposons de ramener la surface taxable à 220m² suite à la démolition de l'annexe").
+	\end{itemize}
+
 \end{enumerate}
 
 \subsubsection{Les paramètres techniques spécifiques au litige}
@@ -267,10 +281,18 @@ L'instruction se concentre généralement sur trois variables d'ajustement de la
 
 \begin{description}
 	\item[La classification (Le Standing)] \hfill \\
-	Le litige porte sur le classement (Luxe, Moyen, Économique). L'instructeur doit objectiver le classement en utilisant la grille de cotation officielle (matériaux, finitions).
+	Le litige porte sur le classement de l'immeuble dans une catégorie (Luxe, Moyen, Économique). C'est une appréciation souvent subjective.
+	
+	\begin{itemize}[label=\tiny$\blacksquare$]
+		\item  \textbf{Rôle de l'instructeur :} Objectiver le classement en utilisant la grille de cotation officielle (nombre de points selon les matériaux : marbre vs carreaux ciment, baies vitrées vs naco, etc.).
+	\end{itemize}
 	
 	\item[L'affectation (L'Usage)] \hfill \\
-	Vérifier si l'usage réel correspond à l'usage déclaré (ex : villa d'habitation transformée en bureaux).
+       Vérifier si l'usage réel correspond à l'usage déclaré.
+       
+       	\begin{itemize}[label=\tiny$\blacksquare$]
+       	\item \textbf{ Cas fréquent :} Une villa déclarée en "habitation principale" (exonéré) mais transformée en "bureaux d'entreprise" ou "clinique" (tarif commercial plus élevé). L'instruction sur place permet de requalifier l'imposition.
+       \end{itemize}
 	
 	\item[La pondération des surfaces] \hfill \\
 	Vérifier si les coefficients sont justifiés (ex : une terrasse couverte ne doit pas être comptée à 100 \% comme une pièce de vie).
@@ -278,68 +300,193 @@ L'instruction se concentre généralement sur trois variables d'ajustement de la
 
 \begin{center}
 	\fbox{\begin{minipage}{0.9\textwidth}
-			\textbf{Note pédagogique :} Insister sur l'importance des \textbf{photos} dans le dossier d'instruction. Devant la Commission de Recours ou le Juge, une photo vaut mieux qu'une longue description pour prouver la vétusté ou l'inachèvement d'un immeuble.
+			\textbf{Note:} L'importance des \textbf{photos} dans le dossier d'instruction est de mise. Devant la Commission de Recours ou le Juge, une photo vaut mieux qu'une longue description pour prouver la vétusté ou l'inachèvement d'un immeuble.
+	\end{minipage}}
+\end{center}
+
+\subsection{L'intervention de la Commission Administrative des Recours (CAR)}
+
+L'instruction administrative ne se limite pas toujours à un dialogue bilatéral entre le service et le contribuable. Conformément à l'\textbf{article 356 du Livre des Procédures Fiscales (LPF)}, l'instruction peut nécessiter la saisine d'un organe consultatif paritaire : la Commission Administrative des Recours (CAR).
+
+\subsubsection{Compétence matérielle : La souveraineté du fait}
+
+La CAR n'est pas une juridiction et n'a pas compétence pour interpréter la loi fiscale (questions de droit). Son domaine d'expertise est \textbf{la question de fait}.
+L'article 356 du LPF lui attribue une compétence spécifique en matière foncière :
+\begin{quote}
+	\textit{« Elle est compétente pour émettre un avis sur la détermination des valeurs locatives des biens imposables à la taxe foncière. »}
+\end{quote}
+Elle intervient donc pour trancher les débats sur le standing, l'état d'entretien ou la comparaison avec les locaux de référence.
+
+\subsubsection{Saisine et procédure}
+
+\begin{itemize}
+	\item \textbf{La saisine :} Elle peut être saisie soit à l'initiative de l'Administration (pour conforter sa position), soit à la demande du contribuable lorsque le désaccord persiste sur l'évaluation technique.
+	
+	\item \textbf{La portée de l'avis :} L'avis rendu par la CAR est \textbf{consultatif}. Juridiquement, le Commissaire Général n'est pas obligé de le suivre. Cependant, cet avis possède une autorité technique et morale forte.
+	\textit{Pratique administrative :} Il est très rare que l'Administration s'écarte de l'avis de la Commission sur une évaluation foncière sans une motivation renforcée et des preuves contraires irréfutables.
+\end{itemize}
+
+\subsection{Les pouvoirs d'investigation et de contrôle}
+
+Pour mener à bien l'instruction et vérifier la sincérité des déclarations du contribuable, l'Administration dispose de prérogatives de puissance publique exorbitantes du droit commun.
+
+\subsubsection{Le Droit de Communication}
+L'instructeur ne se limite pas aux pièces fournies par le réclamant. Il peut solliciter des tiers pour recouper les informations, sans que le secret professionnel ne puisse lui être opposé (sauf exceptions strictes).
+\begin{itemize}
+	\item \textbf{Les sources d'information :} Notaires (actes de vente), agences immobilières (baux), syndics de copropriété, concessionnaires de services publics (CEET/TDE pour prouver l'occupation ou la vacance via les consommations).
+\end{itemize}
+
+\subsubsection{Le Droit d'Enquête et de Visite}
+C'est l'outil indispensable du contentieux foncier, mais aussi le plus sensible au regard des libertés publiques (inviolabilité du domicile).
+\begin{itemize}
+	\item \textbf{Objet :} Recenser les éléments de confort intérieur (carrelage, climatisation, nombre de points d'eau) pour fixer la Valeur Locative.
+	\item \textbf{Limites :} L'entrée dans des locaux servant exclusivement d'habitation nécessite le consentement du contribuable. En cas de refus, l'Administration peut, selon les cas, procéder à une évaluation d'office ou solliciter une autorisation judiciaire.
+\end{itemize}
+
+\vspace{0.5cm}
+
+\begin{center}
+	\fbox{\begin{minipage}{0.9\textwidth}
+			\textbf{Synthèse:} L'instruction de la réclamation est une phase \textit{inquisitoire} (dirigée par l'Administration) mais \textit{contradictoire}. Le rôle du cadre du Cadastre est d'apporter la preuve technique (le rapport d'expertise) qui permettra de clore le litige, soit par un dégrèvement justifié, soit par un rejet motivé inattaquable devant le juge.
 	\end{minipage}}
 \end{center}
 
 
+\section{La décision administrative de clôture}
 
-\section{La décision administrative}
+La phase administrative du contentieux s'achève par une prise de position formelle de l'Administration. Juridiquement, cette décision constitue un \textbf{acte administratif unilatéral faisant grief}. Elle marque l'épuisement de la voie administrative et, en cas de désaccord persistant, l'ouverture de la voie juridictionnelle.
 
-À l’issue de l’instruction, l’administration fiscale statue sur la réclamation par une
-décision administrative.
+\subsection{Typologie des décisions}
 
-\subsection{Admission totale}
+L'autorité compétente (le Commissaire Général ou, par délégation, le Commissaire des Impôts) peut rendre trois types de décisions :
 
-L’admission totale intervient lorsque l’administration reconnaît le bien-fondé
-complet de la réclamation. Elle entraîne le dégrèvement intégral de l’imposition
-contestée.
+\begin{description}
+	\item[L'Admission totale (Le Dégrèvement)] \hfill \\
+	L'Administration reconnaît le bien-fondé de la réclamation.
+	\begin{itemize}
+		\item \textit{Forme :} Elle se matérialise par l'édition d'un \textbf{certificat de dégrèvement} qui annule la dette fiscale.
+		\item \textit{Effet :} Le litige s'éteint. Si le contribuable avait déjà payé, il a droit au remboursement (restitution) des sommes indûment versées, assorties le cas échéant d'intérêts moratoires.
+	\end{itemize}
+	
+	\item[L'Admission partielle] \hfill \\
+	C'est une décision hybride. L'Administration accepte certains chefs de demande mais en rejette d'autres.
+	\begin{itemize}
+		\item \textit{Exemple :} L'OTR accepte de corriger l'erreur de superficie (passage de 500 m² à 400 m²) mais refuse de changer le classement de standing (maintien en catégorie « Luxe »).
+		\item \textit{Conséquence stratégique :} Le contribuable obtient une réduction de sa cotisation, mais il conserve le droit de saisir le tribunal pour la partie rejetée.
+	\end{itemize}
+	
+	\item[Le Rejet exprès] \hfill \\
+	L'Administration maintient intégralement l'imposition initiale, estimant que le contribuable n'a apporté aucune preuve suffisante pour renverser la présomption d'exactitude du rôle.
+\end{description}
 
-\subsection{Admission partielle}
+\subsection{L'obligation de motivation (Formalisme substantiel)}
 
-L’admission partielle correspond à la situation dans laquelle l’administration
-reconnaît partiellement le bien-fondé de la réclamation. Elle conduit à un dégrèvement
-partiel de la taxe foncière.
+En droit administratif moderne, et spécifiquement en vertu du Livre des Procédures Fiscales, \textbf{toute décision de rejet (total ou partiel) doit être motivée}.
 
-\subsection{Rejet}
+\begin{enumerate}
+	\item \textbf{Le contenu de la motivation :} \\
+	Une formule stéréotypée du type \textit{« Votre réclamation est rejetée comme non fondée »} est illégale. La motivation doit être :
+	\begin{itemize}
+		\item \textbf{En fait :} L'Administration doit répondre aux arguments factuels du contribuable (ex : \textit{« Contrairement à vos allégations, la visite du 12 mars a révélé la présence de meubles... »}).
+		\item \textbf{En droit :} Elle doit viser le texte légal fondant le rejet (ex : \textit{« Application de l'article X du CGI... »}).
+	\end{itemize}
+	
+	\item \textbf{Sanction du défaut de motivation :} \\
+	L'absence ou l'insuffisance de motivation entache la procédure. Devant le juge, cela peut affaiblir considérablement la position de l'Administration et renverser la charge de la preuve.
+\end{enumerate}
 
-Le rejet intervient lorsque l’administration estime que la réclamation n’est pas
-fondée. Cette décision ouvre la voie à un éventuel recours juridictionnel.
+\subsection{Le mécanisme de la Décision Implicite de Rejet}
 
-\subsection{Obligation de motivation}
+Pour éviter que l'Administration ne bloque l'accès au juge en s'abstenant de répondre, le législateur a institué un mécanisme de sauvegarde.
 
-Toute décision administrative rendue en matière contentieuse doit être motivée en
-droit et en fait. L’obligation de motivation constitue une garantie essentielle pour le
-contribuable et une condition de la légalité de la décision.
+\begin{itemize}
+	\item \textbf{Le délai de réponse :} L'Administration dispose d'un délai légal (généralement \textbf{6 mois}) pour instruire et statuer.
+	
+	\item \textbf{La naissance de la décision implicite :} Si aucune réponse n'est notifiée au contribuable à l'expiration de ce délai, le silence de l'Administration vaut \textbf{décision implicite de rejet}.
+	\textit{Effet juridique :} Cette fiction permet au contribuable de se considérer comme débouté et de saisir le Tribunal (Chambre Administrative) sans attendre une lettre qui ne viendra peut-être jamais.
+\end{itemize}
 
-\section{Le sursis de paiement}
+\subsection{La notification et les voies de recours}
 
-\subsection{Principe}
+La décision expresse doit être notifiée au contribuable pour produire ses effets (déclenchement des délais de recours juridictionnel).
 
-Le sursis de paiement est une mesure par laquelle l’administration suspend
-temporairement le recouvrement de l’imposition contestée pendant l’instruction de
-la réclamation ou la phase juridictionnelle.
+\begin{enumerate}
+	\item \textbf{Les formes de la notification :} \\
+	Elle se fait par pli recommandé avec accusé de réception (AR), remise en main propre contre décharge, ou exploit d'huissier. La date de réception est le point de départ du délai de recours contentieux (2 mois).
+	
+	\item \textbf{La mention des délais et voies de recours :} \\
+	Pour que le délai de recours soit opposable, la notification de rejet doit obligatoirement mentionner :
+	\begin{itemize}
+		\item Les voies de recours (Tribunal compétent).
+		\item Le délai pour agir.
+	\end{itemize}
+	\textit{Jurisprudence :} Si ces mentions sont absentes, le délai de recours ne court pas (le contribuable peut saisir le juge indéfiniment, dans la limite du délai raisonnable).
+\end{enumerate}
 
-\subsection{Conditions}
+\section{Le sursis de paiement (L'aménagement de l'exigibilité)}
 
-Le sursis de paiement est subordonné à la présentation d’une réclamation régulière et
-à une demande expresse du contribuable. Il peut être refusé lorsque la contestation
-apparaît manifestement infondée.
+L'introduction d'une réclamation contentieuse, même fondée sur des arguments solides, ne dispense pas, \textit{de jure}, le contribuable de son obligation de payer. Cette règle sévère, issue du principe du \textbf{« privilège du préalable »}, peut placer le redevable dans une situation financière critique.
+Pour concilier la sauvegarde des intérêts du Trésor et la protection du contribuable, le Livre des Procédures Fiscales (LPF) a institué un mécanisme dérogatoire : le sursis de paiement.
 
-\subsection{Garanties exigées}
+\subsection{Le principe : L'absence d'effet suspensif de la réclamation}
 
-Afin de préserver les intérêts du Trésor public, l’octroi du sursis de paiement peut
-être subordonné à la constitution de garanties suffisantes, telles qu’une caution ou
-une sûreté réelle, dans les conditions prévues par le Livre des procédures fiscales.
+Il est impératif pour les cadres de l'administration fiscale de maîtriser ce principe : \textbf{la réclamation contentieuse n'a pas d'effet suspensif automatique}.
 
-\section*{Conclusion du chapitre}
-\addcontentsline{toc}{section}{Conclusion du chapitre}
+\begin{enumerate}
+	\item \textbf{L'exigibilité immédiate :} \\
+	L'émission du rôle rend l'impôt exigible. Le comptable public (le Receveur des impôts) est personnellement et pécuniairement responsable du recouvrement des créances prises en charge. Par conséquent, il est tenu d'engager des poursuites (commandement, saisie) si le contribuable ne paie pas à l'échéance, même si une lettre de contestation a été envoyée au Commissaire Général.
+	
+	\item \textbf{La nécessité d'une demande expresse :} \\
+	Le sursis de paiement est une faveur légale qui doit être \textbf{expressément sollicitée}.
+	\begin{itemize}
+		\item \textit{Forme :} La demande de sursis doit être formulée dans la réclamation contentieuse elle-même ou dans une demande annexe jointe à celle-ci.
+		\item \textit{Objet :} Elle doit préciser le montant des droits contestés pour lesquels le sursis est demandé (le contribuable peut ne contester qu'une partie de la cote).
+	\end{itemize}
+\end{enumerate}
 
-La procédure contentieuse en matière de taxes foncières illustre l’équilibre recherché
-par le législateur entre la protection des droits du contribuable et la sauvegarde des
-intérêts financiers des collectivités territoriales. La maîtrise de cette procédure est
-indispensable aux cadres du cadastre et de l’administration fiscale, appelés à jouer
-un rôle central dans la prévention et le règlement des litiges fonciers.
+\subsection{Les conditions d'octroi : La constitution de garanties}
+
+L'octroi du sursis n'est pas un droit absolu ; il est conditionné par la capacité du contribuable à garantir le recouvrement ultérieur de la créance en cas de rejet de sa demande.
+
+\begin{description}
+	\item[L'exigence de garanties (Sécurisation de la créance)] \hfill \\
+	Lorsque le montant contesté excède un certain seuil fixé par la loi, ou lorsque le comptable estime qu'il y a un risque de non-recouvrement (insolvabilité organisée, départ à l'étranger), le contribuable doit constituer des garanties à hauteur du montant des droits contestés.
+	
+	\item[La nature des garanties admissibles] \hfill \\
+	Le comptable public dispose d'un pouvoir d'appréciation sur la solidité des garanties proposées :
+	\begin{itemize}
+		\item \textbf{Cautionnement bancaire :} Engagement d'une banque à payer à la place du contribuable. C'est la garantie la plus sûre et la plus prisée par l'OTR.
+		\item \textbf{Hypothèque ou Nantissement :} Inscription sur un bien immeuble ou un fonds de commerce.
+		\item \textbf{Consignation :} Versement d'une somme d'argent sur un compte d'attente du Trésor.
+	\end{itemize}
+	
+	\item[La procédure de refus des garanties (Le référé fiscal)] \hfill \\
+	Si le comptable public estime que les garanties offertes sont insuffisantes, il notifie son refus. Le contribuable dispose alors d'un recours spécifique devant le juge des référés pour contester ce refus, distinct du contentieux de l'assiette.
+\end{description}
+
+\subsection{Les effets juridiques et financiers du sursis}
+
+L'acceptation du sursis de paiement gèle temporairement la relation de recouvrement, mais elle n'est pas sans conséquences financières.
+
+\begin{itemize}
+	\item \textbf{L'arrêt des poursuites (Effet suspensif) :} \\
+	Dès que le sursis est validé, le comptable public a interdiction de diligenter des mesures d'exécution forcée jusqu'à la notification de la décision définitive. La prescription de l'action en recouvrement est suspendue.
+	
+	\item \textbf{Le risque financier : Les intérêts moratoires :} \\
+	Le sursis est un « pari » pour le contribuable.
+	\begin{itemize}
+		\item \textit{En cas de dégrèvement (Gain) :} Le sursis prend fin, les garanties sont levées aux frais du Trésor.
+		\item \textit{En cas de rejet (Perte) :} L'impôt devient immédiatement exigible. Plus grave, le contribuable devra payer des \textbf{intérêts moratoires} (intérêts de retard) calculés sur toute la durée du sursis pour compenser le préjudice de trésorerie de l'État.
+	\end{itemize}
+\end{itemize}
+
+\vspace{0.5cm}
+
+\begin{center}
+	\fbox{\begin{minipage}{0.9\textwidth}
+			\textbf{Analyse pour le cadre du Cadastre :} Ce mécanisme illustre la séparation des pouvoirs au sein de l'OTR. Le service du Cadastre instruit le bien-fondé de la taxe (assiette), tandis que le Receveur apprécie la solvabilité et les garanties (recouvrement). Une mauvaise coordination entre ces services peut conduire à des situations aberrantes où l'on saisit les biens d'un contribuable dont la taxe va être annulée la semaine suivante pour erreur technique.
+	\end{minipage}}
+\end{center}
 
 
 \end{document}
