--- a/CONTENTIEUX_TF/Cours_tex/Ccl.tex
+++ b/CONTENTIEUX_TF/Cours_tex/Ccl.tex
@@ -6,4 +6,14 @@
 
 \chapter*{Conclusion Générale}
 
+Au terme de cette étude approfondie, il apparaît que le contentieux des taxes foncière ne saurait être réduit à une simple suite de procédures administratives ou de recours juridictionnels. Il constitue la clé de voûte de l'équilibre entre les prérogatives de puissance publique de l'Administration fiscale et les garanties fondamentales accordées au contribuable. 
+
+Pour l'inspecteur du Cadastre, la maîtrise de ce contentieux marque le passage du rôle de technicien de l'évaluation à celui d'acteur juridique et financier. De la réception de la réclamation préalable jusqu'à l'exécution d'une décision de la Cour d'Appel, l'agent est constamment appelé à concilier deux impératifs souvent perçus comme contradictoires : la sécurisation des recettes fiscales (essentielles au financement des collectivités locales) et le strict respect du principe de légalité.
+
+La phase administrative, qu'elle soit gracieuse ou contentieuse, joue un rôle de filtre indispensable. Elle permet à l'Administration de réparer ses propres erreurs de manière proactive --- notamment par le biais des dégrèvements d'office encadrés par le Livre des Procédures Fiscales (LPF) --- et de désengorger ainsi les prétoires. Elle témoigne d'une justice fiscale de proximité, capable de distinguer la fraude manifeste de la bonne foi ou de l'indigence réelle.
+
+Toutefois, lorsque le désaccord persiste, la phase juridictionnelle vient rappeler que l'Administration reste soumise au contrôle d'un juge indépendant. L'instruction écrite, le principe du contradictoire et le recours régulier à l'expertise judiciaire garantissent au redevable que l'impôt exigé repose sur des bases matérielles et juridiques incontestables. 
+
+En définitive, le meilleur moyen de réduire le contentieux des taxes foncière réside dans la fiabilisation de l'assiette en amont. La modernisation en cours des outils cadastraux, couplée à une rigueur accrue dans l'application du Code Général des Impôts (CGI), doit permettre de limiter les erreurs matérielles et juridiques. Un impôt juste, assis sur une base incontestable et notifié de manière transparente, est un impôt qui suscite l'adhésion plutôt que la contestation.
+
 \end{document}
